@@ -5,6 +5,7 @@ http://www.rsnapshot.org/
 
 VERSION 1.3.x
 ------------------------------------------------------------------------------
+- add test case for -t showing --link-dest when there is only one snapshot
 - if gnu_cp_al fails, test out a simple cp -al command before suggesting
   that the cp does not support -al.
 - When snapshot_root does not exist, check existence of parent directories.
@@ -30,7 +31,7 @@ VERSION 1.3.1  (Aug 31 2008)
 - Include rsnapshot-copy script written by Matt McCutchen.
 - Allow `backticks` in include_conf.
 - Apply fix-sync_first-rollback.diff patch from Matt McCutchen (02 Apr 2008).
-- hopefully fix bug with link_dest not being used on second and later backups 
+- Fix bug with link_dest not being used on second and later backups 
   when you have link_dest 1 and sync_first 1. (Ignore $sync_dir_was_present)
 - Patch from Adam Greenbaum to allow passing of ssh arguments correctly.
 - David Grant added rsync_numtries to rsnapshot.conf.
